--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,31 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+	    <dependency>
+	      <groupId>net.sf.jung</groupId>
+	      <artifactId>jung-api</artifactId>
+	      <version>2.1.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>net.sf.jung</groupId>
+	      <artifactId>jung-visualization</artifactId>
+	      <version>2.1.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>net.sf.jung</groupId>
+	      <artifactId>jung-graph-impl</artifactId>
+	      <version>2.1.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>net.sf.jung</groupId>
+	      <artifactId>jung-algorithms</artifactId>
+	      <version>2.1.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>net.sf.jung</groupId>
+	      <artifactId>jung-io</artifactId>
+	      <version>2.1.1</version>
+	    </dependency>
+
 	</dependencies>
 </project>
